--- a/index.html
+++ b/index.html
@@ -297,6 +297,17 @@ input[type = 'checkbox'].active  {
         display: flex;
         gap: 10px;
     }
+li{
+    width: 100%;
+    padding: 5px 20px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 3px;
+Font-size;12px
+}
+
 
 }
     </style>
