--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ li{
     align-items: center;
     justify-content: space-evenly;
     border-radius: 3px;
-Font-size;10px
+    font-size;10px
 }
 
 
