--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budget add</title>
+    <link rel="stylesheet" href="/css/budget.css">
     </head>
 <body>
     <div class="main_container">
@@ -46,5 +47,6 @@
             </div>
         </div>
     </div>
+    <script scr='/js/budget.js></script>
    </body>
 </html>
