--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
             </div>
         </div>
     </div>
-    <script scr='/js/budget.js></script>
+    <script scr='/js/budget.js'></script>
    </body>
 </html>
